fix responsive spacing

--- a/css/capaSite.css
+++ b/css/capaSite.css
@@ -1,5 +1,6 @@
 #capaSite {
     margin-top: 80px;
+    padding-bottom: 30px;
 }
 
 .btn {
