--- a/css/sobreMim.css
+++ b/css/sobreMim.css
@@ -1,6 +1,6 @@
 #sobreMim {
     padding-top: 80px;
-    height: 500px;
+    padding-bottom: 100px;
     background-color: #f2bd76;
 }
 
